ögrenci ve admin için ayrı fragment dosyaları açıldı ve login sayfasında yönlendirme için bottom navigation bar eklendi

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#2D850F</color>
+    <color name="purple_500">#2D850F</color>
+    <color name="purple_700">#2D850F</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="kou_green">#297A0C</color>
+    <color name="red_helper">#57031F</color>
+
+    //
+    <color name="ItemSelectedColor">#005175</color>
+    <color name="ItemUnSelectedColor">#FF5722</color>
+    <color name="HomeFragmentBgColor">#FFC107</color>
+    <color name="SearchFragmentBgColor">#03A9F4</color>
+    <color name="ProfileFragmentBgColor">#8BC34A</color>
 </resources>
